# photosnipe

./: AGENTS.md  README.md  TESTING.md
backend/: .gitignore  API.md  Cargo.toml  TESTING.md  TEST_SUMMARY.md
backend/migrations/: 1774022822_create_persons.sql  1774022832_create_snipes.sql
backend/src/: discord_bot.rs  main.rs  models.rs  responses.rs
backend/src/handlers/: mod.rs  persons.rs  snipes.rs  stats.rs
frontend/: README.md  package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tailwind.config.cjs  tailwind.config.js
frontend/src/: app.css
frontend/src/lib/: api.ts  auth.ts
frontend/src/lib/components/: RecentSnipesWidget.svelte  Sidebar.svelte  SnipeStatsWidget.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
frontend/src/routes/snipes/: +page.svelte
frontend/src/routes/stats/: +page.svelte
