[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
mongodb = { version = "2", default-features = false, features = ["tokio-runtime"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.37", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
